# Universal-Convertor

./: App.cpp  CMakeLists.txt  Convertor.cpp  Convertor.h  Fraction.cpp  Fraction.h  LICENSE  Number.cpp  Number.h  README.md  TechnicalTask.md  header.h  main.cpp  technical_task.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.cpp  App.h  Convertor.cpp  Convertor.h  Fraction.cpp  Fraction.h  Number.cpp  Number.h  header.h  main.cpp
